tests/baselines/reference/doExpressionMissingPathAnalysis.errors.txt
tests/cases/compiler/doExpressionMissingPathAnalysis.ts(2,22): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionMissingPathAnalysis.ts(6,9): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionMissingPathAnalysis.ts(19,9): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionMissingPathAnalysis.ts(22,22): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionMissingPathAnalysis.ts(31,5): error TS7030: Not all code paths return a value.


==== tests/cases/compiler/doExpressionMissingPathAnalysis.ts (5 errors) ====
    const c = do {
        try { 1; } catch {} // catch clause missing val
                         ~~
!!! error TS7030: Not all code paths return a value.
    }
    
    const d = do {
        try { } catch { 1; } // try clause missing val
            ~~~
!!! error TS7030: Not all code paths return a value.
    }
    
    const e = do {
        try {1} catch {2} finally {} // this is fine
    }
    
    enum F {
        A, B
    }
    
    function f(x: F) {
        const a = do {
            switch (x) { } // empty switch
            ~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
        }
        const b = do {
            switch (x) { case F.A: {} } // empty case
                         ~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
        }
        const c = do {
            // TODO: it should report, not all cases (F.B) handled / missing a default block
            switch (x) { case F.A: 1; }
        }
    }
    
    const g = do {
        console.log('') // void returning functions
        ~~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
    }
    // No problem
    const h = do { 1;;;;; }
    // No problem
    const i = do { "val"; debugger; }
    const j = do { throw new Error(""); }
    